Should no longer need these JDK options for running the FrankDoc Doclet. (#10395)